# fgm

./: Cargo.toml  readme.md
.github/workflows/: release.yml
docs/: file_config.md
src/: arch.rs  cli.rs  config.rs  lib.rs  main.rs  mpsc.rs
